--- a/blog/templates/blog/detail.html
+++ b/blog/templates/blog/detail.html
@@ -81,9 +81,19 @@
 
 
 <footer class="text-muted">
-  <div class="container text-center">
-    <p>©️ Angad Singh Sandhu {% now "Y" %}</p>
-  </div>
+  <p class="float-left">
+    <small>©️ Angad Singh Sandhu {% now "Y" %}</small>
+
+    </p>
+  <p class="float-right">
+    <small>
+      "Powered using" 
+      <a href="https://getbootstrap.com/">Bootstrap</a>
+      "and"
+      <a href="https://www.djangoproject.com/">Django</a>
+      "."
+    </small>
+  </p>
 </footer>
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
