--- a/blog/templates/blog/allblogs.html
+++ b/blog/templates/blog/allblogs.html
@@ -87,14 +87,20 @@
 
 
 <footer class="text-muted">
-  <div class="container text-center">
-    <p>©️ Angad Singh Sandhu {% now "Y" %}</p>
-  </div>
   <div>
-    <div>
-      right
-      <p>Powered using Bootstrap and Django</p>
-    </div>
+    <p class="float-left">
+      <small>©️ Angad Singh Sandhu {% now "Y" %}</small>
+
+      </p>
+    <p class="float-right">
+      <small>
+        "Powered using" 
+        <a href="https://getbootstrap.com/">Bootstrap</a>
+        "and"
+        <a href="https://www.djangoproject.com/">Django</a>
+        "."
+      </small>
+    </p>
   </div>
 </footer>
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
