--- a/blog/templates/blog/detail.html
+++ b/blog/templates/blog/detail.html
@@ -87,11 +87,11 @@
     </p>
   <p class="float-right">
     <small>
-      "Powered using" 
+      Powered using
       <a href="https://getbootstrap.com/">Bootstrap</a>
-      "and"
+      and
       <a href="https://www.djangoproject.com/">Django</a>
-      "."
+      .
     </small>
   </p>
 </footer>
