--- a/jobs/templates/jobs/home.html
+++ b/jobs/templates/jobs/home.html
@@ -54,7 +54,7 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
               <div class="navbar-nav ml-auto">
-                <a class="nav-item nav-link" href="https://www.instagram.com/angadssandhu/">Instagram<span class="sr-only">(current)</span></a>
+                <a class="nav-item nav-link" href="https://github.com/angad277">Github<span class="sr-only">(current)</span></a>
                 <a class="nav-item nav-link" href="{% static 'resume.pdf' %}">Resume</a>
                 <a class="nav-item nav-link" href="{% url 'allblogs' %}">Blog</a>
                 
@@ -68,7 +68,7 @@
   <section class="jumbotron text-center">
     <div class="container">
       <h1>Hey, I'm Angad!</h1>
-      <p class="lead text-muted">This is my personal portfolio, you can read about me in my blog and read about my jobs!</p>
+      <p class="lead text-muted">This is my personal webpage!</p>
       <p>
         
             <a href="mailto:angad277@gmail.com" class="btn btn-primary my-2">E-mail</a>
@@ -76,7 +76,7 @@
         
        
       </p>
-      <img src = " {% static 'angad.jpeg' %} " height=250/>
+      <img src = " {% static 'angad.jpeg' %} " class="img-fluid rounded" height=250/>
       
     </div>
   </section>
@@ -100,7 +100,12 @@
       </div>
     </div>
   </div>
-
+  <div style="text-align: right;">
+    <a href="https://www.linkedin.com/in/angad-singh-sandhu-259779197/" target="_blank"><i class="fa fa-linkedin fa-2x" aria-hidden="true"></i></a>
+    <a href="mailto:angad277@gmail.com"_blank"><i class="fa fa-envelope fa-2x" aria-hidden="true"></i></a>
+    <a href="https://www.facebook.com/sethpranjal" target="_blank"><i class="fa fa-facebook fa-2x" aria-hidden="true"></i></a>
+    <!-- <a class="btn btn-outline-light btn-social mx-1" href="#"><i class="fab fa-fw fa-facebook-f"></i></a> -->
+  </div>
 </main>
 
 <footer class="text-muted">
