--- a/blog/templates/blog/allblogs.html
+++ b/blog/templates/blog/allblogs.html
@@ -54,7 +54,7 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
               <div class="navbar-nav ml-auto">
-                <a class="nav-item nav-link" href="https://www.instagram.com/angadssandhu/">Instagram<span class="sr-only">(current)</span></a>
+                <a class="nav-item nav-link" href="https://github.com/angad277">Github<span class="sr-only">(current)</span></a>
                 <a class="nav-item nav-link" href="{% static 'resume.pdf' %}"">Resume</a>
                 <a class="nav-item nav-link active" href="#">Blog</a>
                 
