--- a/jobs/templates/jobs/home.html
+++ b/jobs/templates/jobs/home.html
@@ -44,6 +44,13 @@
     </style>
     <!-- Custom styles for this template -->
     <link href="album.css" rel="stylesheet">
+    <style>
+      i {
+  display: inline-block;
+  margin-right: 0.9em;
+  margin-bottom: 30px;
+}
+    </style>
   </head>
   <body>
     <header>
