--- a/jobs/templates/jobs/home.html
+++ b/jobs/templates/jobs/home.html
@@ -76,14 +76,7 @@
     <div class="container">
       <h1>Hey, I'm Angad!</h1>
       <p class="lead text-muted">This is my personal webpage!</p>
-      <p>
-        
-            <a href="mailto:angad277@gmail.com" class="btn btn-primary my-2">E-mail</a>
-    
-        
-       
-      </p>
-      <img src = " {% static 'angad.jpeg' %} " class="rounded mx-auto d-block"/>
+      <img src = " {% static 'angad.jpeg' %} " class="rounded mx-auto d-block" height=300/>
       
     </div>
   </section>
@@ -109,8 +102,9 @@
   </div>
   <div style="text-align: right;">
     <a href="https://www.linkedin.com/in/angad-singh-sandhu-259779197/" target="_blank"><i class="fa fa-linkedin fa-2x" aria-hidden="true"></i></a>
-    <a href="mailto:angad277@gmail.com"_blank"><i class="fa fa-envelope fa-2x" aria-hidden="true"></i></a>
-    <a href="https://www.facebook.com/sethpranjal" target="_blank"><i class="fa fa-facebook fa-2x" aria-hidden="true"></i></a>
+    <a href="mailto:angad277@gmail.com"_blank"><i class="fa fa-envelope fa-2x red-text" aria-hidden="true"></i></a>
+    <a href="https://www.facebook.com/angad.sandhu.31/" target="_blank"><i class="fa fa-facebook fa-2x blue-text" aria-hidden="true"></i></a>
+    <a href="https://www.instagram.com/angadssandhu/" target="_blank"><i class="fab fa-instagram fa-2x pink-text" aria-hidden="true"></i></a>
     <!-- <a class="btn btn-outline-light btn-social mx-1" href="#"><i class="fab fa-fw fa-facebook-f"></i></a> -->
   </div>
 </main>
