--- a/blog/templates/blog/allblogs.html
+++ b/blog/templates/blog/allblogs.html
@@ -44,6 +44,11 @@
     </style>
     <!-- Custom styles for this template -->
     <link href="album.css" rel="stylesheet">
+    <style>
+      h1, h2, h3, h4, h5, h6 {
+  font-family: "Playfair Display", Georgia, "Times New Roman", serif;
+}
+    </style>
   </head>
   <body>
     <header>
@@ -66,7 +71,7 @@
 <main role="main">
     <div class = "container">
 
-        <h1 class="text-center  pt-3">Welcome to Angad's blog</h1>
+        <h1 class="text-center  pt-3">Order & Chaos</h1>
         <br>
         <br>
         <h2>Latest Posts</h2>
