--- a/jobs/templates/jobs/home.html
+++ b/jobs/templates/jobs/home.html
@@ -14,6 +14,7 @@
 
     <!-- Bootstrap core CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
     <!-- Favicons -->
 <link rel="apple-touch-icon" href="/docs/4.4/assets/img/favicons/apple-touch-icon.png" sizes="180x180">
@@ -104,7 +105,7 @@
     <a href="https://www.linkedin.com/in/angad-singh-sandhu-259779197/" target="_blank"><i class="fa fa-linkedin fa-2x" aria-hidden="true"></i></a>
     <a href="mailto:angad277@gmail.com" taget="_blank"><i class="fa fa-envelope fa-2x red-text" aria-hidden="true"></i></a>
     <a href="https://www.facebook.com/angad.sandhu.31/" target="_blank"><i class="fa fa-facebook fa-2x blue-text" aria-hidden="true"></i></a>
-    <a href="https://www.instagram.com/angadssandhu/" target="_blank"><i class="fab fa-instagram fa-2x" aria-hidden="true"></i></a>
+    <a href="https://www.instagram.com/angadssandhu/" target="_blank"><i class="fa fa-instagram" style="font-size:48px;color:red" aria="true"></i></a>
     <!-- <a class="btn btn-outline-light btn-social mx-1" href="#"><i class="fab fa-fw fa-facebook-f"></i></a> -->
   </div>
 </main>
