--- a/jobs/templates/jobs/home.html
+++ b/jobs/templates/jobs/home.html
@@ -102,10 +102,10 @@
     </div>
   </div>
   <div style="text-align: right;">
-    <a href="https://www.linkedin.com/in/angad-singh-sandhu-259779197/" target="_blank"><i class="fa fa-linkedin fa-2x" aria-hidden="true"></i></a>
-    <a href="mailto:angad277@gmail.com" taget="_blank"><i class="fa fa-envelope fa-2x red-text" aria-hidden="true"></i></a>
-    <a href="https://www.facebook.com/angad.sandhu.31/" target="_blank"><i class="fa fa-facebook fa-2x blue-text" aria-hidden="true"></i></a>
-    <a href="https://www.instagram.com/angadssandhu/" target="_blank"><i class="fa fa-instagram" style="font-size:48px;color:red" aria="true"></i></a>
+    <a href="https://www.linkedin.com/in/angad-singh-sandhu-259779197/" target="_blank"><i class="fa fa-linkedin-square fa-2x" aria-hidden="true"></i></a>
+    <a href="mailto:angad277@gmail.com" taget="_blank"><i class="fa fa-envelope fa-2x" aria-hidden="true"></i></a>
+    <a href="https://www.facebook.com/angad.sandhu.31/" target="_blank"><i class="fa fa-facebook-square fa-2x" aria-hidden="true"></i></a>
+    <a href="https://www.instagram.com/angadssandhu/" target="_blank"><i class="fa fa-instagram fa-2x" style="color:red" aria-hidden="true"></i></a>
     <!-- <a class="btn btn-outline-light btn-social mx-1" href="#"><i class="fab fa-fw fa-facebook-f"></i></a> -->
   </div>
 </main>
