--- a/jobs/templates/jobs/home.html
+++ b/jobs/templates/jobs/home.html
@@ -77,7 +77,7 @@
     <div class="container">
       <h1>Hey, I'm Angad!</h1>
       <p class="lead text-muted">This is my personal webpage!</p>
-      <img src = " {% static 'angad.jpeg' %} " class="rounded mx-auto d-block" height=300/>
+      <img src = " {% static 'angad2.jpeg' %} " class="rounded mx-auto d-block" height=300/>
       
     </div>
   </section>
